# tsdb-tool

./: .coverage  .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  coverage.xml  pyproject.toml
src/sql_tool/: __init__.py  __main__.py
src/sql_tool/cli/: helpers.py  main.py  output.py
src/sql_tool/cli/commands/: _shared.py  config.py  query.py  service.py  ts.py
src/sql_tool/core/: client.py  config.py  exceptions.py  exit_codes.py  monitoring.py  postgres.py  query_source.py  timescaledb.py
src/sql_tool/formatters/: __init__.py  base.py  csv.py  json.py  table.py
src/tsdb_tool/: __init__.py  __main__.py
src/tsdb_tool/cli/: main.py  output.py
src/tsdb_tool/cli/commands/: _shared.py  config.py  connections.py  databases.py  live_tail.py  query.py  schema.py  service.py  table.py  ts.py
src/tsdb_tool/core/: client.py  config.py  exceptions.py  live_tail.py  logging.py  models.py  monitoring.py  postgres.py  query_source.py  timescaledb.py
src/tsdb_tool/formatters/: __init__.py  base.py  csv.py  json.py  table.py
tests/: conftest.py  integration_config.py  test_client.py  test_config.py  test_exceptions.py  test_helpers.py  test_live_tail.py  test_logging.py  test_models.py  test_package.py  test_postgres.py  test_query_source.py  test_timescaledb.py
tests/cli/: test_e2e_formatting.py  test_exit_codes.py  test_main.py  test_output.py  test_pg.py  test_query.py  test_ts.py
tests/formatters/: test_base.py  test_csv.py  test_json.py  test_table.py
