[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsdb-tool"
version = "0.1.0"
description = "PostgreSQL query and administration CLI tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Vlad Korolev", email = "vlad@v-lad.org"}
]
requires-python = ">=3.13"
keywords = ["postgresql", "timescaledb", "cli", "database", "admin", "sql"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
  "Environment :: Console"
]
dependencies = [
  "typer>=0.12.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.5.0",
  "rich>=13.0.0",
  "structlog>=24.0",
  "sentry-sdk>=1.40.0"
]

[project.urls]
Homepage = "https://github.com/vladistan/sql-tool"
Repository = "https://github.com/vladistan/sql-tool"
Issues = "https://github.com/vladistan/sql-tool/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "pre-commit>=4.0"
]

[project.scripts]
sql-tool = "sql_tool.cli.main:run"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__about__.py",
  "*/migrations/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sql_tool"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["sentry_sdk", "sentry_sdk.*", "structlog", "structlog.*", "psycopg", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=sql_tool",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml",
  "--cov-fail-under=80"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests (requires real PostgreSQL)",
  "unit: marks tests as unit tests (fast, no external dependencies)",
  "e2e: marks tests as end-to-end tests"
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning"
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH" # flake8-type-checking
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
  "ARG001", # unused function argument
  "ARG002" # unused method argument
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["sql_tool"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101"]
